--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ProjectAndroid</string>
+    <string name="item_1">Item 1</string>
+    <string name="eat_all_day">Eat all day</string>
 </resources>
