--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,15 @@
     <string name="app_name">ProjectAndroid</string>
     <string name="item_1">Item 1</string>
     <string name="eat_all_day">Eat all day</string>
+    <string name="profile">Profile</string>
+    <string name="login">Login</string>
+    <string name="sign_in">Sign In</string>
+    <string name="username">Username</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="confirm_password">Confirm Password</string>
+    <string name="save">Save</string>
+
+    <string name="registration">Registration</string>
+    <string name="register">Register</string>
 </resources>
