--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
 
     <string name="registration">Registration</string>
     <string name="register">Register</string>
+    <string name="back">Back</string>
 </resources>
